--- a/hero_stage1.css
+++ b/hero_stage1.css
@@ -1,5 +1,9 @@
 body{
-    background-color:rgb(255, 255, 255);
+    background-image: url("sky.png");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    background-size: 100% 100%;
 }.next{
     float: right;
     margin-right: 10px;
